# suika_gen

./: fruit.py  model.py  pyproject.toml
