[tool.poetry]
name = "suika-gen"
version = "0.1.0"
description = ""
authors = ["RudenkoAD <rudenko.ad@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
keras = "^3.4.1"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
